<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/newactionbar_backbutton"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logotrs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.o3sa.politician.customfonts.CustomEditText
                    android:id="@+id/oldpasswrdedtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password_text"
                    android:inputType="textPassword"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:textColorHint="@color/lite_color_text"
                    android:textColor="@color/post_text_color"
                    />

                <com.o3sa.politician.customfonts.CustomEditText
                    android:id="@+id/newpasswrdedtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpassword_text"
                    android:inputType="textPassword"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:textColorHint="@color/lite_color_text"
                    android:textColor="@color/post_text_color"
                    android:layout_marginTop="5dp" />

                <com.o3sa.politician.customfonts.CustomEditText
                    android:id="@+id/confrmpasswrdedtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword_text"
                    android:inputType="textPassword"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:textColorHint="@color/lite_color_text"
                    android:textColor="@color/post_text_color"
                    android:layout_marginTop="5dp" />

                <com.o3sa.politician.customfonts.CustomButton
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/signin_btn_bg"
                    android:text="@string/submt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>