<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/new_actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/newactionbar_backbutton"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/kcr_modi_meeting"
                android:adjustViewBounds="true"
                />
            <!--android:src="@drawable/splash_logo"-->

            <com.o3sa.politician.customfonts.CustomButton
                android:id="@+id/edit_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/white"
                android:text="@string/edit_prfle"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/signin_btn_bg"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"/>

        </FrameLayout>



        <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/profile_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/johson"
            android:visibility="visible"
            android:textColor="@color/post_text_color"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>

        <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/profile_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lochbar"
            android:visibility="visible"
            android:textColor="@color/lite_color_text"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="14sp"/>

            <com.o3sa.politician.customfonts.CustomRegularTextView
                android:id="@+id/custm_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/lite_color_text"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >

                <com.o3sa.politician.customfonts.CustomBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_posts"
                    android:textSize="16dp"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/orange" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/se_all_posts_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:padding="5dp"
                android:layout_marginRight="10dp">

                <com.o3sa.politician.customfonts.CustomRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_posts"
                    android:textSize="12dp"
                    android:textColor="@color/lite_color_text" />
                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/back_button"
                    android:tint="@color/lite_color_text"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:rotation="180"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    >

                    <com.o3sa.politician.customfonts.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="16dp"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/se_all_flwrs_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <com.o3sa.politician.customfonts.CustomRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all_followers"
                        android:textSize="12dp"
                        android:textColor="@color/lite_color_text" />
                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/back_button"
                        android:tint="@color/lite_color_text"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:rotation="180"/>
                </LinearLayout>
            </LinearLayout>



       <!-- <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/nodatafound_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nodatafound"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:textColor="@color/lite_color_text" />-->

        <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/nodatafound_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noresultsfound"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/post_text_color"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/followers_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:visibility="visible"
                >
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <com.o3sa.politician.customfonts.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="16dp"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/orange" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/se_all_following_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <com.o3sa.politician.customfonts.CustomRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all_"
                        android:textSize="12dp"
                        android:textColor="@color/lite_color_text"/>
                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/back_button"
                        android:tint="@color/lite_color_text"
                        android:layout_marginLeft="5dp"
                        android:rotation="180"/>
                </LinearLayout>
            </LinearLayout>




        <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/no_folloingdata_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noresultsfound"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/post_text_color"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/following_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <com.o3sa.politician.customfonts.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/catches"
                        android:textSize="16dp"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/orange" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/se_all_catches_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <com.o3sa.politician.customfonts.CustomRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all_"
                        android:textSize="12dp"
                        android:textColor="@color/lite_color_text"/>

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/back_button"
                        android:tint="@color/lite_color_text"
                        android:layout_marginLeft="5dp"
                        android:rotation="180"/>
                </LinearLayout>
            </LinearLayout>





        <com.o3sa.politician.customfonts.CustomRegularTextView
            android:id="@+id/no_catches_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noresultsfound"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/post_text_color"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>



       <!--
       com.fishbuddy.custommap.WorkaroundMapFragment
       android:name="com.google.android.gms.maps.SupportMapFragment"-->


    </LinearLayout>
    </ScrollView>
</LinearLayout>